# scrutil

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  png_handler.cpp  png_handler.h  screenshot.cpp  screenshot.h  selection.cpp  selection.h
